--- a/MyFirstWebApp/Views/Blah/GradeForm.cshtml
+++ b/MyFirstWebApp/Views/Blah/GradeForm.cshtml
@@ -27,4 +27,4 @@
 </form>
 
 <!--bring in the different packages and javascript I've written'-->
-<script src="js/gradecalc.js"></script>
+<script src="~/js/gradecalc.js"></script>
