--- a/MyFirstWebApp/Views/Shared/_Layout.cshtml
+++ b/MyFirstWebApp/Views/Shared/_Layout.cshtml
@@ -23,8 +23,8 @@
     <footer>This is my awesome footer!</footer>
 
 
-    <script src="lib/jquery/jquery-3.6.0.min.js"></script>
+    <script src="~/lib/jquery/jquery-3.6.0.min.js"></script>
 
-    <script src="lib/bootstrap/js/bootstrap.min.js"></script>
+    <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
